Fixed some namespacing issues.

--- a/src/_sass/components/event-item.scss
+++ b/src/_sass/components/event-item.scss
@@ -25,12 +25,12 @@
   filter: brightness(.3) grayscale(.25);
 }
 
-.event-name {
+.event-item .event-name {
   font-weight: bold;
   font-size: 1.1rem;
 }
 
-.event-details {
+.event-item .event-details {
 
 }
 
