--- a/src/_sass/components/footer.scss
+++ b/src/_sass/components/footer.scss
@@ -59,7 +59,7 @@
   }
 }
 
-.coderdojo-verification {
+.footer .coderdojo-verification {
   font-size: .8rem;
   text-align: center;
   padding: 2rem;
